Bug 229129 - sort by birthday not working
Summary: sort by birthday not working
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-02 14:13 UTC by Dj YB
Modified: 2010-03-09 14:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dj YB 2010-03-02 14:13:18 UTC
Version:           4.4 (using 4.4.00 (KDE 4.4.0), 4.4.0-9.fc11 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.30.10-105.2.23.fc11.i686.PAE

as the title says, when sorting by birthdays no logical sorting is produced.
the expected behavior would be a date sorting asc/desc (ignoring year?)
thanks,
YB.
Comment 1 Tobias Koenig 2010-03-09 14:54:57 UTC
SVN commit 1101159 by tokoe:

Sort date columns (e.g. Birthday column) by day/month instead
of by textual representation

BUG: 229129


 M  +19 -0     contactsfilterproxymodel.cpp  
 M  +1 -0      contactsfilterproxymodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1101159