Sort date columns (e.g. Birthday column) by day/month instead of by textual representation

BUG: 229129

svn path=/trunk/KDE/kdepim/; revision=1101159